--- a/final/styles/styles.css
+++ b/final/styles/styles.css
@@ -864,7 +864,7 @@ a {
     padding: 20px 20px;
     width: 80%;
     height: 150px;
-    background-color: var(--main-color);
+    background-color: #2196F3;
     border-radius: 15px;
 }
 
